--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@stripe/stripe-js": "^4.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "immer": "^10.1.1",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "next-sanity": "^9.5.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "sanity": "^3.58.0",
     "stripe": "^16.12.0",
@@ -30,7 +32,8 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "use-shopping-cart": "^3.2.0"
+    "use-shopping-cart": "^3.2.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
